# Fiducia

./: .gitignore  README.md  evaluation_results.json  evaluator.md  output_details.csv  pyproject.toml
code/: llm.py  main.py  prompts.py  schema.py  tracing.py
code/evaluation/: evaluator.md  main.py
