[project]
name = "hackerrank-orchestrate-june26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arize-phoenix-otel>=0.16.1",
    "openai>=2.43.0",
    "opentelemetry-sdk>=1.42.1",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pillow-heif>=1.4.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
]
